--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -173,28 +173,22 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       title="Bioinformatics & Environmental Sciences Consultant"
     />
 
-   <TimeLineElement
-      title="Project Coordinator - Pesticide Monitoring Project"
-      subtitle="From 2024 - Today at Environmental Science & Research Consulting GmBH (as Independent Consultant)"
-      desc="Project Coordinator of the 'Pesticide Exposure Assessment of the Swiss Non-Occupational Sensitive Population' study (www.pestizidmonitoring.ch)"
-    />
-
      <TimeLineElement
       title="Data Scientist / Bioinformatician - Nathalie Chèvre's Team"
       subtitle="From 2024 - Today at University of Lausanne, Switzerland"
-      desc="In silico tools / Chemoinformatics - Nathalie Chèvre's team. Postdoctoral position to develop an in silico machine learning tool to identify chemicals having Endocrine-Disrupting activity. Methods: R, Python, in silico models, NAMs, machine learning"
+      desc="In silico  / Data Science -  Development of an in silico machine learning tool to identify chemicals having Endocrine-Disrupting activity. Methods: R, Python, bash/UNIX, HPC, machine learning"
     />
 
       <TimeLineElement
       title="Bioinformatician / Toxicologist - Marie-Gabrielle Zurich's Team (50%)"
       subtitle="From 2024 - Today at University of Lausanne, Switzerland"
-      desc="Role as biostatistician/bioinformatician - Marie-Gabrielle Zurich's team. Postdoctoral position to perform multiomics data analysis & to develop statistical tools for in vitro toxicological studies. Methods: lipidomics, metabolomics, transcriptomics, scRNAseq, R, Python, organoids, adverse-outcome pathways (AOPs)"
+      desc="Role as biostatistician/bioinformatician - Marie-Gabrielle Zurich's team. Postdoctoral position to perform multiomics data analysis & to develop statistical tools for in vitro toxicological studies. Methods: lipidomics, metabolomics, transcriptomics, scRNAseq, R, Python, in vitro 3D models, adverse-outcome pathways (AOPs)"
     />
    
     <TimeLineElement
-      title="Data Scientist / Bioinformatician - Fanny Langlet's Team (50%)"
+      title="Data Scientist / Bioinformatician - Fanny Langlet's Team (50-100%)"
       subtitle="From 2021 - Today at University of Lausanne, Switzerland"
-      desc="Role as bioinformatician / biologist - Fanny Langlet's team. Postdoctoral position to develop novel methods to decipher the role of cell-cell communication involved in the neuroendocrine control of energy balance. Technologies: scRNAseq, transcriptomics, tracing, cell-cell communication, R, Python, HPC, machine learning"
+      desc="Role as bioinformatician / biologist - Fanny Langlet's team. Postdoctoral position to develop novel methods to decipher the role of cell-cell communication involved in the neuroendocrine control of energy balance. Technologies: scRNAseq, transcriptomics, tracing, cell-cell communication, R, Python, HPC."
     />
 
      <TimeLineElement
@@ -203,6 +197,11 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       desc="European Food & Safety Authority (EFSA). 5-year mandate as scientific and technical support"
     />
 
+    <TimeLineElement
+    title="Project Coordinator - Pesticide Monitoring Project"
+    subtitle="2024 - at Environmental Science & Research Consulting GmBH (as Independent Consultant)"
+    desc="Project Coordinator of the PEASNSP study"
+  />
     <TimeLineElement
       title="Postdoctoral fellow - H2020 FREIA Project"
       subtitle="From 2020 to 2021 at University of Liege, Belgium"
