--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -110,7 +110,7 @@ const last_posts = posts.slice(0, 3);
         <div class="divider my-0"></div>
 
         <HorizontalCard
-          title="An Integrative Tool to Identify and Prioritze the Risk Asessment of Endocrine Disrupting Chemicals (EDCs)"
+          title="An Integrative Tool to Identify and Prioritize the Risk Assessment of Endocrine Disrupting Chemicals (EDCs)"
           img="/Tmap.png"
           desc="Keywords: Endocrine Disruption, Toxicology, In Silico, Machine Learning, NAMs, Chemo-informatics, Adverse outcome pathways (AOPs)"
           id="p1" 
@@ -119,7 +119,7 @@ const last_posts = posts.slice(0, 3);
         <div class="divider my-0"></div>
         <HorizontalCard
         title="HypCCAtlas, A Functional Hypothalamic Atlas of Cell-Cell Communication"
-        img="/Pseudospatial.png"
+        img="/Network.png"
         desc="Keywords: Bioinformatics, Nutrition, Energy balance, Connectomics, Hypothalamus, Neuroendocrinology"
         id="p3" 
         url="/p3/"
