--- a/src/pages/p1.astro
+++ b/src/pages/p1.astro
@@ -15,7 +15,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 </script>
 
 <div>
-          <div class="text-3xl w-full font-bold mb-2">An Integrative Tool to Identify and Prioritze the Risk Asessment of Endocrine Disrupting Chemicals (EDCs) </div>
+          <div class="text-3xl w-full font-bold mb-2">An Integrative Tool to Identify and Prioritize the Risk Assessment of Endocrine Disrupting Chemicals (EDCs) </div>
         </div>
 
      
