--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -89,7 +89,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     
       <li><b>Multi-omics Data Integration</b>
         <ol style="list-style-type: circle; padding-bottom: 0;">
-              <li style="margin-left:2em">Transcriptomics (scRNAseq)</li>
+              <li style="margin-left:2em">Transcriptomics & scRNAseq</li>
               <li style="margin-left:2em; padding-bottom: 0;">Proteomics</li>
               <li style="margin-left:2em; padding-bottom: 0;">Metabolomics</li>
               <li style="margin-left:2em; padding-bottom: 0;">Lipidomics</li>
@@ -101,13 +101,13 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
     <li><b>Bioinformatics & computational biology</b>
             <ol style="list-style-type: circle; padding-bottom: 0;">
-                  <li style="margin-left:2em; padding-bottom: 0;">R </li>
-                  <li style="margin-left:2em; padding-bottom: 0;">Python </li>
-                  <li style="margin-left:2em; padding-bottom: 0;">High-performance Computing (HPC)</li>
+                  <li style="margin-left:2em; padding-bottom: 0;">languages: R, Python, bash </li>
+                  <li style="margin-left:2em; padding-bottom: 0;">Large datasets (SQL) </li>
+                  <li style="margin-left:2em; padding-bottom: 0;">High-performance Computing (HPC, slurm)</li>
                   <li style="margin-left:2em; padding-bottom: 0;">Machine Learning</li>
                   <li style="margin-left:2em; padding-bottom: 0;">Shiny</li>
                   <li style="margin-left:2em; padding-bottom: 0;">Version Control (Git)</li>
-                  <li style="margin-left:2em; padding-bottom: 0;">UNIX/Shell</li>
+                  <li style="margin-left:2em; padding-bottom: 0;">Windows & Linux</li>
 
              </ol>
     </li>
