--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -131,7 +131,7 @@ const last_posts = posts.slice(0, 3);
       img="/p11b.png"
       desc="Keywords: Epidemiology, Pesticides, Toxicology, Exposure Assessment, Exposure Mixtures, Endocrine Disruptors"
       id="p11" 
-      url="/p11/"
+      url=""
     />
 
        
