--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -43,7 +43,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
         <div class="divider my-0"></div>
         <HorizontalCard
           title="HypCCAtlas, A Functional Hypothalamic Atlas of Cell-Cell Communication"
-          img="/Connectome.png"
+          img="/Network.png"
           desc="Keywords: Bioinformatics, Nutrition, Energy balance, Connectomics, Hypothalamus, Neuroendocrinology"
           id="p2" 
           url="/p2/"
@@ -54,7 +54,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
         img="/p11b.png"
         desc="Keywords: Epidemiology, Pesticides, Toxicology, Exposure Assessment, Exposure Mixtures, Endocrine Disruptors"
         id="p11" 
-        url="/p11/"
+        url=""
       />        <div class="divider my-0"></div>
 
 
