--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,19 +54,24 @@ const last_posts = posts.slice(0, 3);
           <div class="py-1"><text class="text-lg"> 
       
                <div class="mb-1 text-justify">
-                I am a multidisciplinary researcher specialized in biology, (eco-)toxicology, computational science and neuroscience. Currently, I am a researcher at the University of Lausanne and an independent consultant.
+                I am a multidisciplinary researcher in biology, (eco-)toxicology, computational science and neuroscience. 
+                Currently, I am a researcher at the University of Lausanne and an independent consultant.
               </div>
             </text> </div></p>
               
          
                   <div class="py-1"><text class="text-lg"> 
                     <p align="justify">
-                      <b>As a researcher</b>, I develop computational methods to better understand the risks associated with environmental factors such as nutrition and chemical pollutants. These methods include machine learning models, multiomic & scRNAseq data analysis and the development of interactive tools to visualize chemical hazards and New Approach Methodologies (NAMs), among others.
+                      <b>As a researcher</b>, I develop computational methods to better understand the risks associated with environmental factors 
+                      such as nutrition and chemical pollutants. These methods include machine learning models, multiomic & scRNAseq data analysis and the 
+                      development of New Approach Methodologies (NAMs) and interactive tools to explore chemical hazards.
                     </div>
 
                     <div class="py-1"><text class="text-lg"> 
                       <p align="justify">
-                       <b> As a consultant</b>, I bring expertise in data science, biology and toxicology to scientists and industry. With my mixed background I can provide insightful data visualizations and deep interpretations of the underlying biological significance.
+                       <b> As a consultant</b>, I bring expertise in data science, biology and toxicology to scientists and industry. 
+                       With my mixed background I can provide insightful data visualizations and deep interpretations of the 
+                       underlying biological significance.
                       </div>
 <br> 
 
