--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -73,11 +73,11 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
  
   <div class="mb-5 text-justify">
   
-  Multidisciplinary scientist & consultant with a background in toxicology, biology, environmental 
+  Multidisciplinary data scientist & consultant with a background in  biology, toxicology, environmental 
   and computational sciences. My main objective is to develop computational and bioinformatic tools that 
-  can expand scientific knowledge and make a valuable contribution to public health and society. My goal 
-  is to achieve a comprehensive understanding of the biological mechanisms and risks associated with exposures 
-  to environmental signals (i.e. nutritional cues, chemicals).
+  can make a valuable contribution to public health and society. My research is focused on
+  achieving a comprehensive understanding of the biological mechanisms and risks associated with exposures 
+  to environmental signals (i.e. chemicals, nutritional factors).
 
   </div>
 
