--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -75,9 +75,9 @@ const last_posts = posts.slice(0, 3);
             </text>
             <div class="py-1">  </div>
             <text class="text-lg"><p align="justify">  <b>	Disciplines:</b> 
-              Data Science, Bioinformatics/Biostatistics, (eco-)Toxicology, (Neuro-)Endocrinology, Computational Biology, Regulatory Toxicology, Neuroscience. </p> </text>
+              Data Science, Bioinformatics/Biostatistics, (eco-)Toxicology, Biology, Computational Biology, (Neuro-)Endocrinology, Neuroscience, Chemo-informatics. </p> </text>
               <div class="py-1">  </div>
-              <text class="text-lg"><p align="justify">  <b>	Expertise Keywords:</b> Multiomics, Chemo-informatics, Endocrine Disruption, Adverse outcome pathways (AOPs), Epidemiology, Molecular Biology, Reproductive Toxicology, scRNAseq, Neuroendocrinology. </p> </text>
+              <text class="text-lg"><p align="justify">  <b>	Expertise Keywords:</b> Multiomics, Endocrine Disruption, In Silico methods, Adverse outcome pathways (AOPs), scRNAseq, Transcriptomics, Metabolimics/Lipidomics, HPC, Git, Shiny, Machine Learning, Linux, Bash. </p> </text>
 
               </div>
             
