--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,14 +59,14 @@ const last_posts = posts.slice(0, 3);
          
                   <div class="py-1"><text class="text-lg"> 
                     <p align="justify">
-                      <b>As a researcher</b>, I develop computational methods to better understand the risks associated with environmental factors 
+                      As a researcher, I develop computational methods to better understand the risks associated with environmental factors 
                       such as nutrition and chemical pollutants. These methods include machine learning models, multiomic & scRNAseq data analysis and the 
                       development of New Approach Methodologies (NAMs) and interactive tools to explore chemical hazards.
                     </div>
 
                     <div class="py-1"><text class="text-lg"> 
                       <p align="justify">
-                       <b> As a consultant</b>, I bring expertise in data science, biology and toxicology to scientists and industry. 
+                       As a consultant, I bring expertise in data science, biology and toxicology to scientists and industry. 
                        With my mixed background I can provide insightful data visualizations and deep interpretations of the 
                        underlying biological significance.
                       </div>
