--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const last_posts = posts.slice(0, 3);
           <div class="text-4xl py-4 font-bold">David Lopez Rodriguez, PhD</div>
           <div class="text-2xl   font-bold"> 
             <span class='bigger'>(1)</span>  
-            <span class='headmain'>Data Scientist / Bioinformatician / Toxicologist - Lausanne University </span> </div>
+            <span class='headmain'>Data Scientist @ Lausanne University & SCAHT </span> </div>
           <div class="text-2xl font-bold">
               <span class='bigger'>(2)</span> 
               <span class='headmain'>Independent consultant</span> </div>
@@ -51,8 +51,8 @@ const last_posts = posts.slice(0, 3);
           <div class="py-1"><text class="text-lg"> 
       
                <div class="mb-1 text-justify">
-                I am a multidisciplinary researcher in biology, (eco-)toxicology, computational science and neuroscience. 
-                Currently, I am a researcher at the University of Lausanne and an independent consultant.
+                Multidisciplinary researcher in biology, toxicology and computational science. 
+                
               </div>
             </text> </div></p>
               
@@ -61,21 +61,14 @@ const last_posts = posts.slice(0, 3);
                     <p align="justify">
                       As a researcher, I develop computational methods to better understand the risks associated with environmental factors 
                       such as nutrition and chemical pollutants. These methods include machine learning models, multiomic & scRNAseq data analysis and the 
-                      development of New Approach Methodologies (NAMs) and interactive tools to explore chemical hazards.
+                      development of interactive tools to explore chemical hazards. As a consultant, I bring expertise in data science, biology and toxicology to scientists and industry. 
                     </div>
 
-                    <div class="py-1"><text class="text-lg"> 
-                      <p align="justify">
-                       As a consultant, I bring expertise in data science, biology and toxicology to scientists and industry. 
-                       With my mixed background I can provide insightful data visualizations and deep interpretations of the 
-                       underlying biological significance.
-                      </div>
-<br> 
 
             </text>
             <div class="py-1">  </div>
             <text class="text-lg"><p align="justify">  <b>	Disciplines:</b> 
-              Data Science, Bioinformatics/Biostatistics, (eco-)Toxicology, Biology, Computational Biology, (Neuro-)Endocrinology, Neuroscience, Chemo-informatics. </p> </text>
+              Data Science, Bioinformatics/Biostatistics, Toxicology, Biology, Computational Biology, Endocrinology, Neuroscience, Chemo-informatics. </p> </text>
               <div class="py-1">  </div>
               <text class="text-lg"><p align="justify">  <b>	Expertise Keywords:</b> Multiomics, Endocrine Disruption, In Silico methods, Adverse outcome pathways (AOPs), scRNAseq, Transcriptomics, Metabolimics/Lipidomics, HPC, Git, Shiny, Machine Learning, Linux, Bash. </p> </text>
 
@@ -100,7 +93,7 @@ const last_posts = posts.slice(0, 3);
 
 
         <HorizontalCard
-        title="Multi-Omics Approaches to Evaluate the Neurotoxicity of Propylene Glycol Ether Solvents"
+        title="Multi-Omics Approaches to Evaluate the Neurotoxicity of Propylene Glycol Ethers"
         img="/p12b.png"
         desc="Keywords: Bioinformatics, BrainSpheres In vitro Models, NAMs, Lipidomics, Metabolomics, Proteomics, Transcriptomics, Toxicology, Benchmark Dose (BMD), Adverse outcome pathways (AOPs), Solvents"
         id="p12" 
