--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,12 +28,19 @@ const last_posts = posts.slice(0, 3);
 
 
     <div class="pb-12 mt-5">
-          <div class="text-4xl py-4 font-bold">David Lopez Rodriguez, PhD</div>
-          <div class="text-2xl   font-bold"> 
+        <div class="text-4xl py-4 font-bold">David Lopez-Rodriguez, PhD</div>
+        <div class="text-2xl font-bold mt-1"> 
+        <span class='bigger'></span>  
+        <span class='headmain'> Senior Scientific Project Manager | Bioinformatician | Translational Researcher  </span> </div>
+
+            <div class="text-1xl font-bold">
             <span class='bigger'>(1)</span>  
-            <span class='headmain'>Data Scientist @ Lausanne University & SCAHT </span> </div>
-          <div class="text-2xl font-bold">
-              <span class='bigger'>(2)</span> 
+            <span class='headmain'> Faculty of Biomedical Sciences, Lausanne University, Switzerland </span> </div>
+          <div class="text-1xl font-bold">
+            <span class='bigger'>(2)</span>  
+            <span class='headmain'> Department Environmental Toxicology, EAWAG, Zurich, Switzerland </span> </div>
+          <div class="text-1xl font-bold">
+              <span class='bigger'>(3)</span> 
               <span class='headmain'>Independent consultant</span> </div>
     
 
@@ -51,40 +58,18 @@ const last_posts = posts.slice(0, 3);
           <div class="py-1"><text class="text-lg"> 
       
                <div class="mb-1 text-justify">
-                Multidisciplinary researcher in biology, toxicology and computational science. 
-                
+                Senior multidisciplinary and outcome-oriented scientist passionate about computational biology, translational medicine, and public health, with expertise in multiomics and in-silico modeling.            
               </div>
             </text> </div></p>
-              
-         
-                  <div class="py-1"><text class="text-lg"> 
-                    <p align="justify">
-                      As a researcher, I develop computational methods to better understand the risks associated with environmental factors 
-                      such as nutrition and chemical pollutants. These methods include machine learning models, multiomic & scRNAseq data analysis and the 
-                      development of interactive tools to explore chemical hazards. As a consultant, I bring expertise in data science, biology and toxicology to scientists and industry. 
-                    </div>
-
-
             </text>
             <div class="py-1">  </div>
+            <div class="py-1">  </div>
             <text class="text-lg"><p align="justify">  <b>	Disciplines:</b> 
-              Data Science, Bioinformatics/Biostatistics, Toxicology, Biology, Computational Biology, Endocrinology, Neuroscience, Chemo-informatics. </p> </text>
-              <div class="py-1">  </div>
-              <text class="text-lg"><p align="justify">  <b>	Expertise Keywords:</b> Multiomics, Endocrine Disruption, In Silico methods, Adverse outcome pathways (AOPs), scRNAseq, Transcriptomics, Metabolimics/Lipidomics, HPC, Git, Shiny, Machine Learning, Linux, Bash. </p> </text>
-
-              </div>
-            
-            </div></p>
-            
+              Bioinformatics/Biostatistics, Biomedicine, Endocrinology, Neuroscience, Chemo-informatics. </p> </text>       
         
            
   
-  
 
-
-          <div class="mt-8">
-      
-          </div>
         </div>
 
         <div>
