--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,17 +16,6 @@ const last_posts = posts.slice(0, 3);
 
 <BaseLayout>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-B2JEVNPCKR"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-B2JEVNPCKR');
-</script>
-
-
     <div class="pb-12 mt-5">
         <div class="text-4xl py-4 font-bold">David Lopez-Rodriguez, PhD</div>
         <div class="text-2xl font-bold mt-1"> 
@@ -44,7 +33,7 @@ const last_posts = posts.slice(0, 3);
               <span class='headmain'>Independent consultant</span> </div>
     
 
-              <p align="justify">
+
                 <div class="py-1"><text class="text-lg"> 
             
                      <div class="mb-1 text-justify">
@@ -54,7 +43,7 @@ const last_posts = posts.slice(0, 3);
                   </text> </div></p>
 
 
-          <p align="justify">
+
           <div class="py-1"><text class="text-lg"> 
       
                <div class="mb-1 text-justify">
@@ -64,7 +53,7 @@ const last_posts = posts.slice(0, 3);
             </text>
             <div class="py-1">  </div>
             <div class="py-1">  </div>
-            <text class="text-lg"><p align="justify">  <b>	Disciplines:</b> 
+            <text class="text-lg"> <b>	Disciplines:</b> 
               Bioinformatics/Biostatistics, Biomedicine, Endocrinology, Neuroscience, Chemo-informatics. </p> </text>       
         
            
