--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -99,7 +99,7 @@
 				</svg>
 			</a>
 
-			<a href="https://wp.unil.ch/langletlab/" target="_blank" class="mx-3" aria-label="UNIL" title="UNIL">
+			<a href="https://applicationspub.unil.ch/interpub/noauth/php/Un/UnPers.php?PerNum=1242691&LanCode=37" target="_blank" class="mx-3" aria-label="UNIL" title="UNIL">
 				<svg
 				  xmlns="http://www.w3.org/2000/svg"
 				  width="24"
