--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -28,15 +28,12 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 <BaseLayout title = "Publications - David Lopez Rodriguez">
 
     <div style="text-align:center">
-
       <nav style="background:#F2F7FF;">
           <a>  |  </a> 
-           
             <a href="#section1"><b>Manuscripts in preparation  </b></a>    <a>  |  </a> 
             <a href="#section2"><b>Peer-reviewed Scientific Articles</b></a>    <a>  |  </a> 
             <a href="#section3"><b>Preprints & Non-peer Reviewed Articles</b></a>    <a>  |  </a> 
       </nav>
-
       <nav style="background:#F2F7FF;"><a>  |  </a>
             <a href="#section4" class="mb-5 text-justify"><b>Book Chapters</b></a> <a>  |  </a>  
             <a href="#section5" class="mb-5 text-justify"><b>PhD Thesis</b></a> <a>  |  </a>     
@@ -44,7 +41,6 @@ import HorizontalCard from "../components/HorizontalCard.astro";
             <a href="#section7"><b>Articles in the General Press</b></a>    <a>  |  </a> 
             <a href="#section8"><b>Master's Student Supervision</b></a>    <a>  |  </a> 
       </nav>
-
   </div>
       <div style="line-height:60%;"> <br></div>
       <hr> 
@@ -55,28 +51,20 @@ import HorizontalCard from "../components/HorizontalCard.astro";
  
 
  <section id="section1"></section>
-     <div class="text-2xl w-full font-bold mb-0 mt-10">Manuscripts Under Review  / In Preparation <font size="2"> (as of 09/24) </font>  <hr>  </div>
+     <div class="text-2xl w-full font-bold mb-0 mt-10">Manuscripts Under Review  / In Preparation <font size="2"> (as of 02/25) </font>  <hr>  </div>
  
       <div style="line-height:50%;"> <br></div>
 
       <ul class="list-disc mx-6 mb-10 grid gap-2">
-        <li><div class="text-lg"> <p align="justify"> Fudvoye J, <u>Lopez-Rodriguez D</u> Parent AS. <i> Early placental biomarkers of a developmental exposure to a very low dose of BPS.</i> Under review in Chemosphere. </p> </div>
+        <li><div class="text-lg"> <p align="justify"> Bridgeman L, Cimbalo A, <u>Lopez-Rodriguez D</u>, Pamies D, Frangiamone M. <i>  Exploring Toxicological Pathways of Microplastics and Nanoplastics: Insights from Animal and Cellular Models. </i> Under review in Journal of Hazardous Materials. </p> </div>
+        <li><div class="text-lg"> <p align="justify"> Wang S, <u>Lopez-Rodriguez D</u>, Frangiamone M, Ma F, Pamies D. <i>  Proteomic profiling of the BrainSpheres derived from human induced pluripotent stem cells. </i> Under review in Frontiers in Cell and Developmental Biology. </p> </div>
+        <li><div class="text-lg"> <p align="justify"> Fudvoye J, <u>Lopez-Rodriguez D</u>, Parent AS. <i> Early placental biomarkers of a developmental exposure to a very low dose of BPS.</i> Under review in Reproductive Toxicology. </p> </div>
         </li>  <li><div class="text-lg"> <p align="justify">  <u>Lopez-Rodriguez D</u>, Duroux D, Chevre N. <i> A One-Health Integrative Approach To Identify the Toxicity of Chemical Pollutants.  </i> Manuscripts in Preparation. </p> </div></li>
-
-        <li><div class="text-lg"> <p align="justify">  <u>Lopez-Rodriguez D</u>, Pamies D, Meister I, Jornod N, Repond C, Boccard J, Fleurimont J, Rudaz S, Zurich MG. <i> The use of Multiomic approaches to evaluate the Neurotoxicity of Polyetylene Glycol Ethers </i> Manuscripts in Preparation. </p> </div></li>
-
+        <li><div class="text-lg"> <p align="justify">  <u>Lopez-Rodriguez D</u>, Pamies D, Meister I, Jornod N, Repond C, Boccard J, Fleurimont J, Rudaz S, Zurich MG. <i> The use of Multiomic approaches to evaluate the Neurotoxicity of Polyetylene Glycol Ethers.  </i> Manuscripts in Preparation. </p> </div></li>
         <li><div class="text-lg"> <p align="justify"> Wang S, <u>Lopez-Rodriguez D</u>, Kalph J, Morales Pantoja I, Nunez C, Fritsche E, Smirnova L, Pamies D. <i> Reproducibility assessment of the hiPSC-derived Brain Spheroid model. </i>Manuscripts in Preparation. </p> </div></li>
-
-
-        <li><div class="text-lg"> <p align="justify"> Wang S, <u>Lopez-Rodriguez D</u>, Frangiamone M, Zurich MG, Pamies D. <i>  Proteomic profiling of the BrainSpheres derived from human induced pluripotent stem cells. </i>Manuscripts in Preparation. </p> </div></li>
-
-
-
-      <li><div class="text-lg"> <p align="justify"> Pamies D, <u>Lopez-Rodriguez D</u>, Bertoli J, Meister I, Jornod N, Repond C, Boccard J, Fleurimont J, Nunes C, Rudaz S, Zurich MG. <i> Evaluation of the Neurotoxicity of Glycol Ether Solvents in Humans Using New Approach Methodologies (NAMs). </i>Manuscripts in Preparation. </p> </div></li>
-
-      <li><div class="text-lg"> <p align="justify"> <u>Lopez-Rodriguez D</u> & Guerrero-Limon, G. <i> Harnessing the power of Artificial Intelligence (AI) to generate innovative New Alternative Methodologies (NAMs) to improve chemical regulatory risk assessment.</i> Manuscripts in Preparation. </p> </div>
-      </li>
-  
+        <li><div class="text-lg"> <p align="justify"> Pamies D, <u>Lopez-Rodriguez D</u>, Bertoli J, Meister I, Jornod N, Repond C, Boccard J, Fleurimont J, Nunes C, Rudaz S, Zurich MG. <i> Evaluation of the Neurotoxicity of Glycol Ether Solvents in Humans Using New Approach Methodologies (NAMs). </i>Manuscripts in Preparation. </p> </div></li>
+        <li><div class="text-lg"> <p align="justify"> <u>Lopez-Rodriguez D</u> & Guerrero-Limon, G. <i> Harnessing the power of Artificial Intelligence (AI) to generate innovative New Alternative Methodologies (NAMs) to improve chemical regulatory risk assessment.</i> Manuscripts in Preparation. </p> </div>
+        </li>
 
       </ul>
       
@@ -141,11 +129,6 @@ import HorizontalCard from "../components/HorizontalCard.astro";
     <li>  <div class="text-lg"> <p align="justify"> <a href="https://www.biorxiv.org/content/10.1101/2020.06.26.172965v1" target="_blank">  <u>Lopez-Rodriguez D</u>, Francisco Aylwin C,  Delli V, Sevrin E,  Campanile M,  Martin M, Franssen D, Gérard A, Blacher S, Tirelli E, Noël A, Lomniczi A, Parent AS.   <i> Multi- and transgenerational disruption of maternal behavior and female puberty by Endocrine Disrupting Chemical (EDC) mixture exposure </i>
  <b>BioRxiv preprint. </b> </a>  </p> </div>
     </li>
-
-
-    <li> <div class="text-lg"><p align="justify"><u>Lopez-Rodriguez D</u>.<i> An Environmental History Perspective on Sustainable Economic Growth. May 13, 2023. </i>
-    </li>
-
     </ul>
     
 
@@ -255,13 +238,13 @@ import HorizontalCard from "../components/HorizontalCard.astro";
       <section id="section8"></section>
           <div class="text-2xl w-full font-bold mb-0 mt-10">Master's Student Supervision <hr>  </div>
           <div style="line-height:50%;"> <br></div>
-
-
             <ul class="list-disc mx-6 mb-10 grid gap-2">
-                <li><p align="justify"><a>Marzia Campanile <i>(role as "co-supervisor")</i>. <b>Effects of lactational and gestational exposure to a polychlorinated biphenyl mixture (Aroclor1254) in the dentate gyrus of POMC-EGFP transgenic mice </b> (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </p></li>
-                <li><p align="justify"><a>Virginia Delli <i>(role as "co-supervisor")</i>. <b> Effects of a perinatal exposure to the flame retardant compound BDE-47 on neurogenesis and cognition</b> (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </p></li>
-                <li><p align="justify"><a>Eva Luz Lachat <i>(role as "expert")</i>. <b> Bisphenol A and autism spectrum disorder in humans, a systematic review of the literature</b> (2023). University of Lausanne, Switzerland</a> </p></li>
-                <li><p align="justify"><a>Anna Dreier <i>(role as "expert")</i>. <b>  Next-generation human iPSC-derived 3D brain systems to study chemical-induced myelin disruption </b> (2023). University of Lausanne, Switzerland </a> </p></li>
+              <li><p align="justify"><a>Vera Bonderovic <i>(role as "co-supervisor")</i>. <b> Identification of Health Risks faced by Nail Salons Workers: a Systematic Review</b> (2024). University of Geneva, Switzerland</a> </p></li>
+              <li><p align="justify"><a>Eva Luz Lachat <i>(role as "expert")</i>. <b> Bisphenol A and autism spectrum disorder in humans, a systematic review of the literature</b> (2024). University of Lausanne, Switzerland</a> </p></li>
+              <li><p align="justify"><a>Sara Kabashi <i>(role as "supervisor")</i>. <b> Investigating the impact of fasting on the suprachiasmatic nucleus </b> (2024). University of Lausanne, Switzerland</a> </p></li>
+              <li><p align="justify"><a>Anna Dreier <i>(role as "expert")</i>. <b>  Next-generation human iPSC-derived 3D brain systems to study chemical-induced myelin disruption </b> (2023). University of Lausanne, Switzerland </a> </p></li>
+              <li><p align="justify"><a>Virginia Delli <i>(role as "co-supervisor")</i>. <b> Effects of a perinatal exposure to the flame retardant compound BDE-47 on neurogenesis and cognition</b> (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </p></li>
+              <li><p align="justify"><a>Marzia Campanile <i>(role as "co-supervisor")</i>. <b>Effects of lactational and gestational exposure to a polychlorinated biphenyl mixture (Aroclor1254) in the dentate gyrus of POMC-EGFP transgenic mice </b> (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </p></li>
                         </ul>
 
 </BaseLayout>
