--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,26 +12,23 @@ const last_posts = posts.slice(0, 3);
 
 
 
-
-
 <BaseLayout>
 
-    <div class="pb-12 mt-5">
-        <div class="text-4xl py-4 font-bold">David Lopez-Rodriguez, PhD</div>
-        <div class="text-2xl font-bold mt-1"> 
+    <div class="pb-12 mt-5"> <div class="text-4xl font-bold"> David Lopez-Rodriguez, PhD</div>
+          <div class="text-2xl font-bold mt-1"> 
         <span class='bigger'></span>  
         <span class='headmain'> Senior Scientific Project Manager | Bioinformatician | Translational Researcher  </span> </div>
-
+        <div style="height: 0.5rem;"></div>
             <div class="text-1xl font-bold">
-            <span class='bigger'>(1)</span>  
+            <span class='bigger'>&nbsp;&nbsp;&nbsp;&nbsp; (1)</span>  
             <span class='headmain'> Faculty of Biomedical Sciences, Lausanne University, Switzerland </span> </div>
           <div class="text-1xl font-bold">
-            <span class='bigger'>(2)</span>  
+            <span class='bigger'>&nbsp;&nbsp;&nbsp;&nbsp; (2)</span>  
             <span class='headmain'> Department Environmental Toxicology, EAWAG, Zurich, Switzerland </span> </div>
           <div class="text-1xl font-bold">
-              <span class='bigger'>(3)</span> 
+              <span class='bigger'>&nbsp;&nbsp;&nbsp;&nbsp; (3)</span> 
               <span class='headmain'>Independent consultant</span> </div>
-    
+
 
 
                 <div class="py-1"><text class="text-lg"> 
@@ -47,7 +44,7 @@ const last_posts = posts.slice(0, 3);
           <div class="py-1"><text class="text-lg"> 
       
                <div class="mb-1 text-justify">
-                Senior multidisciplinary and outcome-oriented scientist passionate about computational biology, translational medicine, and public health, with expertise in multiomics and in-silico modeling.            
+                Senior multidisciplinary and outcome-oriented scientist passionate about computational biology, translational medicine and public health, with expertise in multiomics analysis and in-silico modeling.            
               </div>
             </text> </div></p>
             </text>
@@ -55,10 +52,6 @@ const last_posts = posts.slice(0, 3);
             <div class="py-1">  </div>
             <text class="text-lg"> <b>	Disciplines:</b> 
               Bioinformatics/Biostatistics, Biomedicine, Endocrinology, Neuroscience, Chemo-informatics. </p> </text>       
-        
-           
-  
-
         </div>
 
         <div>
@@ -95,8 +88,24 @@ const last_posts = posts.slice(0, 3);
       />
       <div class="divider my-0"></div>
 
+      <HorizontalCard
+      title="Identification of Health Risks faced by Nail Salons Workers"
+      img="/HealthHazard.jpg"
+      desc="Keywords: Toxicology, Solvents, Nail Salons, Occupational Health, Public Health, Systematic Review"
+      id="p12" 
+      url="/p12/"
+    />
+    <div class="divider my-0"></div>
 
-       
+    <HorizontalCard
+    title="Association between Bisphenol A and Autism Spectrum Disorders (ASD)"
+    img="/BPA3.png"
+    desc="Keywords: Public Health, Systematic Review, Meta-Analysis, Endocrine Disrupting Chemicals"
+    id="p12" 
+    url="/p12/"
+  />
+  <div class="divider my-0"></div>
+
 
 
 
