--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -50,8 +50,24 @@ import HorizontalCard from "../components/HorizontalCard.astro";
         />
         <div class="divider my-0"></div>
 
+        <HorizontalCard
+        title="Identification of Health Risks faced by Nail Salons Workers"
+        img="/HealthHazard.jpg"
+        desc="Keywords: Toxicology, Solvents, Nail Salons, Occupational Health, Public Health, Systematic Review"
+        id="p12" 
+        url="/p12/"
+      />
+      <div class="divider my-0"></div>
+  
+      <HorizontalCard
+      title="Association between Bisphenol A and Autism Spectrum Disorders (ASD)"
+      img="/BPA3.png"
+      desc="Keywords: Public Health, Systematic Review, Meta-Analysis, Endocrine Disrupting Chemicals"
+      id="p12" 
+      url="/p12/"
+    />
 
-
+    <br>
         <br>
 </div>
 
