--- a/src/pages/Contact.astro
+++ b/src/pages/Contact.astro
@@ -84,7 +84,7 @@ const last_posts = posts.slice(0, 3);
 
 
 <div class="social-icons px-6 my-2 py-2 flex">
-			<a href="https://wp.unil.ch/langletlab/" target="_blank" class="mx-3" aria-label="Lausanne University" title="Lausanne University">
+			<a href="https://applicationspub.unil.ch/interpub/noauth/php/Un/UnPers.php?PerNum=1242691&LanCode=37" target="_blank" class="mx-3" aria-label="Lausanne University" title="Lausanne University">
 				<svg
 				  xmlns="http://www.w3.org/2000/svg"
 				  width="24"
@@ -95,7 +95,7 @@ const last_posts = posts.slice(0, 3);
 					<path d="M21,10a.99974.99974,0,0,0,1-1V6a.9989.9989,0,0,0-.68359-.94824l-9-3a1.002,1.002,0,0,0-.63282,0l-9,3A.9989.9989,0,0,0,2,6V9a.99974.99974,0,0,0,1,1H4v7.18427A2.99507,2.99507,0,0,0,2,20v2a.99974.99974,0,0,0,1,1H21a.99974.99974,0,0,0,1-1V20a2.99507,2.99507,0,0,0-2-2.81573V10ZM20,21H4V20a1.001,1.001,0,0,1,1-1H19a1.001,1.001,0,0,1,1,1ZM6,17V10H8v7Zm4,0V10h4v7Zm6,0V10h2v7ZM4,8V6.7207l8-2.667,8,2.667V8Z"></path>
 					<circle cx="6" cy="18" r="2"></circle>
 				</svg>
-				<a href="https://wp.unil.ch/langletlab/" target="_blank"><b> Lausanne University </b></a>
+				<a href="https://applicationspub.unil.ch/interpub/noauth/php/Un/UnPers.php?PerNum=1242691&LanCode=37" target="_blank"><b> Lausanne University </b></a>
 			</a>
 </div>
 
