--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -208,7 +208,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 <div class="text-3xl w-full font-bold">Awards, Grants and Fellowships <hr> </div>
 </div>
 <div class="time-line-container grid gap-4 mb-10">
-<TimeLineElement title="Postdoctoral Fellowship"  subtitle="2023 - Wallonie-Bruxelles Federation (FWB, Belgium)" />
+<TimeLineElement title="Research Grant"  subtitle="2023 - Wallonie-Bruxelles Federation (FWB, Belgium)" />
 <TimeLineElement title="Ph.D. Thesis Award"  subtitle="2021 - Society of Neuroendocrinology (SNE, France)" />
 <TimeLineElement title="Postdoctoral Travel Grant"  subtitle="2021 - Léon Fredericq Foundation (FLF, Belgium) for carrying out postdoctoral research at the laboratory of Fanny Langlet (UNIL, Lausanne, Switzerland)" />
 <TimeLineElement title="Short-term Postdoctoral Grant"  subtitle="2021 - Wallonie-Bruxelles Federation (FWB, Belgium)  for carrying out postdoctoral research at the laboratory of Fanny Langlet (UNIL, Lausanne, Switzerland)" />
