--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ const last_posts = posts.slice(0, 3);
 
 
           <div class="py-1"><text class="text-lg"> 
-      
+      <br>
                <div class="mb-1 text-justify">
                 Senior multidisciplinary and outcome-oriented scientist passionate about computational biology, translational medicine and public health, with expertise in multiomics analysis and in-silico modeling.            
               </div>
@@ -53,9 +53,11 @@ const last_posts = posts.slice(0, 3);
             <text class="text-lg"> <b>	Disciplines:</b> 
               Bioinformatics/Biostatistics, Biomedicine, Endocrinology, Neuroscience, Chemo-informatics. </p> </text>       
         </div>
-
+<br>
         <div>
           <div class="text-3xl w-full font-bold mb-2">Current projects </div>
+          <div class="divider my-0"></div>
+
         </div>
 
 
@@ -105,8 +107,4 @@ const last_posts = posts.slice(0, 3);
     url="/p12/"
   />
   <div class="divider my-0"></div>
-
-
-
-
 </BaseLayout>
