--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -107,7 +107,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <br>
     <TimeLineElement
     title="Bioinformatician / Senior Researcher"
-    subtitle="02/2025-Today at Eawag / ETHZ, Prof. Colette Von Berg’s team (20%)"
+    subtitle="02/2025-Today at the Department Environmental Toxicology, Eawag / ETHZ, Prof. Colette Von Berg’s team (20%)"
     desc="Leveraging multi-omic datasets to identify early biomarkers of pharmaceutical and food-contact chemical exposure in zebrafish"
     />
     <br>
